plugins {
    id 'java'
    id 'jacoco'
    id 'application'
}

group = 'com.enyoi'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    // SDK oficial de Google GenAI (Gemini)
    implementation 'com.google.genai:google-genai:1.35.0'

    // Logging
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.5.13'

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.mockito:mockito-core:5.10.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'
    testImplementation 'org.assertj:assertj-core:3.25.3'
    testImplementation 'io.projectreactor:reactor-test:3.6.5'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

tasks.register('runSimpleChat', JavaExec) {
    group = 'application'
    description = 'Ejecuta el chat simple'
    mainClass = 'com.enyoi.simplechatia.main.SimpleChatMain'
    classpath = sourceSets.main.runtimeClasspath
    standardInput = System.in
}